# ENERGY-MONITORING-AND-DEVICE-CONTROL-SYSTEM

./: README.md  sdkconfig
main/: CMakeLists.txt
main/components/: OLED.c  OLED.h  RFID.c  firebase.c  login.c  logout.h
src/: main.c  main.h
src/components/: RFID.h  firebase.h  login.h  logout.c  power.c  power.h
